[package]
name = "cubic_curve"
version = "0.1.0"
authors = ["fine-geometer"]
edition = "2018"
description = "Draw the unique cubic curve through nine points."
license = "MIT OR Apache-2.0"
repository = "https://github.com/finegeometer/cubic-curve"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.27"

console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'MouseEvent',
  'Node',
  'KeyboardEvent',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
]